PR/51422: Jose Luis Rodriguez Garcia: Remove unnecessary assignment.